--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DB_URL = "mongodb+srv://ngocduc1542002:efh1jUucJKGeTNaz@cluster0.vqvid.mongodb.net/book-store?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET = "dasjkabnksjbndqkwas"
